manifests/workloads/traefik-reverseproxy/http-https-redirect.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: http-https-redirectscheme
  namespace: kube-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
