manifests/workloads/traefik-reverseproxy/proxmox.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox-reverseproxy
  namespace: kube-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`virtualization.danmanners.com`)
      kind: Rule
      services:
        - name: proxmox@file
          kind: TraefikService
    - match: Host(`pmx.danmanners.com`)
      kind: Rule
      services:
        - name: proxmox@file
          kind: TraefikService
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
  tls:
    secretName: proxmox-reverseproxy
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox-reverseproxy-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: pmx.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  type: ExternalName
  externalName: danmanners.com
  sessionAffinity: None
