manifests/workloads/traefik-reverseproxy/traefik-dashboard.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: traefik.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  type: ExternalName
  externalName: danmanners.com
  sessionAffinity: None
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-web
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`traefik.danmanners.com`) && PathPrefix(`/dashboard`)"
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
    - match: "Host(`traefik.danmanners.com`) && PathPrefix(`/api`)"
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-websecure
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`traefik.danmanners.com`) && PathPrefix(`/dashboard`)"
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
    - match: "Host(`traefik.danmanners.com`) && PathPrefix(`/api`)"
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-dashboard
